--- a/SocialEventPlanner/res/values/strings.xml
+++ b/SocialEventPlanner/res/values/strings.xml
@@ -11,11 +11,10 @@
     <string name="action_cancel">Cancel</string>
     <string name="action_event_save">Event Saved</string>
     <string name="action_event_delete">Event Deleted</string>
-    
     <string name="confirm_delete">Are you sure you want to delete this event?</string>
     <string name="drawer_open">Nav Drawer opened</string>
     <string name="drawer_close">Nav Drawer closed</string>
-    
+
     <string-array name="view_list">
         <item>List View</item>
         <item>Month View</item>
@@ -39,8 +38,10 @@
     <string name="title_activity_single_event">SingleEventActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="upcoming">Upcoming Events</string>
-	<string name="view_event">Event Details</string>
-	<string name="contact_chooser">Choose Contacts</string>
-	<string name="contact">contact</string>
-	<string name="chosen_names">names</string>
+    <string name="view_event">Event Details</string>
+    <string name="contact_chooser">Choose Contacts</string>
+    <string name="contact">contact</string>
+    <string name="chosen_names">names</string>
+    <string name="title_activity_month_view">MonthView</string>
+
 </resources>
