--- a/SocialEventPlanner/res/values/strings.xml
+++ b/SocialEventPlanner/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">Social Event Planner</string>
+    <string name="service_name">NotifierService</string>
     <string name="action_settings">Settings</string>
     <string name="action_add">Create event</string>
     <string name="action_done">Done</string>
