Implemented Connectivity Receiver

--- a/SocialEventPlanner/res/values/strings.xml
+++ b/SocialEventPlanner/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="action_event_save">Event Saved</string>
     <string name="action_event_delete">Event Deleted</string>
     <string name="action_threshold">Change Threshold</string>
+    <string name="action_threshold_set">Set Threshold in mins</string>
     <string name="confirm_delete">Are you sure you want to delete this event?</string>
     <string name="drawer_open">Nav Drawer opened</string>
     <string name="drawer_close">Nav Drawer closed</string>
@@ -58,5 +59,7 @@
     <string name="longitude">Longitude</string>
     <string name="title_activity_month">MonthActivity</string>
     <string name="threshold">Threshold:</string>
+    
+    <string name="preferences_file">myPrefs</string>
 
 </resources>
